--- a/project/templates/gmah_signup.html
+++ b/project/templates/gmah_signup.html
@@ -27,28 +27,28 @@
                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2, 4}$" required>
 
             <label for="name"><b><p class="hova">*</p> Gmah Name <p class="hova">*</p></b></label>
-            <input type="text" placeholder="שם הגמ״ח" name="name" required>
+            <input type="text" placeholder="Of Leshabat" name="name" required>
 
       <label for="firstname"><b><p class="hova">*</p> First Name</b></label>
-            <input type="text" placeholder="מרדכי" name="owner_first_name" required>
+            <input type="text" placeholder="Mordechai" name="owner_first_name" required>
 
       <label for="lastname"><b><p class="hova">*</p> Last Name</p></b></label>
-            <input type="text" placeholder="לוי" name="owner_last_name" required>
+            <input type="text" placeholder="Levi" name="owner_last_name" required>
 
-      <label for="phone"><b>Phone Number</b></label>
+      <label for="phone"><b> <p class="hova">*</p> Phone Number</b></label>
             <input type="text" placeholder="05x-xxxxxxx" name="phone" pattern="[0][0-9]{2}-[0-9]{7}" required>
 
       <label for="city"> <p class="hova">*</p> <b> City </b></label>
-            <input type="text" placeholder="נתניה" name="city" required>
+            <input type="text" placeholder="Netanya" name="city" required>
 
       <label for="street"><b> <p class="hova">*</p> Street </b></label>
-            <input type="text" placeholder="רוטשילד" name="street" required>
+            <input type="text" placeholder="Rotchild" name="street" required>
 
       <label for="streetnum"><b>Street Number </b></label>
             <input type="number" name="street_number" required>
 
             <label for="category"><b>Category</b></label>
-            <input type="text" name="ביגוד" required>
+            <input type="text" name="Clothing" required>
 
     <label for="password"><b> <p class="hova">*</p> Password </b></label>
             <input type="password" placeholder="********" name="password"
