--- a/project/static/style.css
+++ b/project/static/style.css
@@ -72,7 +72,7 @@ text-align:center;
     font-family: 'Optima';
     font-size:24px;
     text-align:center;
-    margin:2%;
+    margin:2% 2% 5% 2%;
 }
 
 /*navbar */
@@ -187,6 +187,16 @@ text-align:center;
     margin:10% 0 0 5%;
     background:white;
   }
+    .homepushable2 {
+    border-radius: 12px;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    outline-offset: 4px;
+    width:10%;
+    margin:10% 0 0 5%;
+    background:white;
+  }
   .homefront {
     display: block;
     padding: 1% 10%;
@@ -200,7 +210,29 @@ text-align:center;
   .homepushable:active .front {
     transform: translateY(-2px);
 
-  }
+}
+.buttonlogin {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button4 {
+  background-color: white;
+  color: black;
+  border: 2px solid #e7e7e7;
+}
+
+.button4:hover {background-color: #e7e7e7;}
+
 .floatleft{
     float:left;
     width:50%;
