--- a/project/templates/donations.html
+++ b/project/templates/donations.html
@@ -5,16 +5,13 @@
 
 <div class="flex-container">
     {% for result in results %}
+       {% if result.accepted!=1 %}
   <div>
       {% set imagename = result.pic_name %}
       <img class="resultProductPhoto" src={{url_for('static',filename='images/products/{}'.format(imagename))}} width="180px" height="150px">
-      <br class=”blank” />
         <p>Product Name: {{ result.name }}</p>
-       {% if result.is_available %}
-        <p style="color: green;">This Product is available</p>
-      <a class="btn btn-primary" href="{{ url_for('main.donate_product_page', id=result.id) }}">Contact</a> <br>
-       {% else %}
-        <p style="color: red;" >This Product isnt available</p>
+      <a class="btn btn-primary" href="{{ url_for('auth.accept_donation', id=result.id) }}">Accept</a>
+
        {% endif %}
   </div>
     {% endfor %}
