--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -2,10 +2,19 @@
 
 
     {% block content %}
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                <div class="alert alert-warning notification is-danger alert-dismissible" style="color:blue;margin: 1% 0 0 0 ; font-size:120%;text-align:center">
+                    {{ messages[0] }}
+                </div>
+                {% endif %}
+                        <br><br><br><br>
 
+            {% endwith %}
     <div class="split homeleft">
         {% if current_user.is_authenticated %}
         <h1 class="homewelcome">
+                                <br>
                 Welcome back {{ current_user.name }}!
             </h1>
         {% endif %}
@@ -24,34 +33,19 @@
                 Here you can borrow items from the closest place to your home
             </p>
             <div class="floatleft" >
-<!--                  <button class="homepushable ">-->
-<!--                      <a href="/donate_money" class="homefront raise shadowed" style="text-decoration:none">-->
-<!--                        Donate Money-->
-<!--                      </a>-->
-<!--                   </button>-->
                   <button class="homepushable ">
-                      <a href="/donate_money" class="homefront raise shadowed" style="text-decoration:none">
+                      <a href="/donate_items" class="homefront raise shadowed" style="text-decoration:none">
                         Donate item
                       </a>
                   </button>
             </div>
         </div>
-        {% if not current_user.is_authenticated %}
         <div class="split homeright">
       <iframe class="mapcentered"
               src="{{ url_for('main.test_map') }}"
                 width="690" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-        {% else %}
-                <div class="split homeright">
-      <iframe class="mapcentered"
-              src="{{ url_for('main.test_map_profile' , email=current_user.email) }}"
-
-                width="690" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-        {% endif %}
 
     </div>
 
