--- a/project/templates/my_borrows.htm
+++ b/project/templates/my_borrows.htm
@@ -21,6 +21,9 @@
                     {% if borrow.approved==0 %}
                         <a class="btn btn-primary" href="{{ url_for('auth.approved_borrow_post', id=borrow.id) }}" style="margin:0 0 0 30%;">Approve</a> <br>
                     {% endif %}
+                    {% if borrow.approved==1 %}
+                        <a class="btn btn-primary" href="{{ url_for('auth.start_borrow', id=borrow.id) }}" style="margin:0 0 0 30%;">Taken</a> <br>
+                    {% endif %}
                 </div>
             {% endif %}
         {% endfor %}
@@ -39,16 +42,14 @@
                        <p>Borrower Name: {{ (func(borrow.borrower_id)).name }}</p>
                        <p>Product Name: {{ (func2(borrow.product_id)).name }}</p>
                    </div>
-                    {% if borrow.approved==0 %}
-                        <a class="btn btn-primary" href="{{ url_for('auth.approved_borrow_post', id=borrow.id) }}" style="margin:0 0 0 30%;">Approve</a> <br>
-                    {% endif %}
+                        <a class="btn btn-primary" href="{{ url_for('auth.end_borrow', id=borrow.id) }}" style="margin:0 0 0 30%;">Returned</a> <br>
                 </div>
             {% endif %}
         {% endfor %}
         <br style="clear:both;">
         <h1 class="homewelcome" style="font-size:30px;text-align:center;"> Active Borrows</h1>
         {% for borrow in borrows %}
-            {% if borrow.approved==1 and borrow.is_active==1 %}
+            {% if borrow.approved==1 and borrow.is_active==1 and not func3(borrow.end_date)%}
                 <div class="col-sm-6" style="border: 1px solid black;">
                      <div style="float:left">
                         {% set imagename = (func2(borrow.product_id)).pic_name %}
@@ -67,7 +68,7 @@
         <br style="clear:both;">
         <h1 class="homewelcome" style="font-size:30px;text-align:center;">Waiting for approve Borrows</h1>
         {% for borrow in borrows %}
-            {% if borrow.approved==0 and borrow.is_active==1 %}
+            {% if (borrow.approved==0 and borrow.is_active==1) and borrow.declined!=1 %}
                 <div class="col-lg-6" style="border: 1px solid black;">
                      <div style="float:left">
                         {% set imagename = (func2(borrow.product_id)).pic_name %}
@@ -81,6 +82,7 @@
                    </div>
                     {% if borrow.approved==0 %}
                         <a class="btn btn-primary" href="{{ url_for('auth.approved_borrow_post', id=borrow.id) }}" style="margin:0 0 0 30%;">Approve</a> <br>
+                        <a class="btn btn-danger" style="color;" href="{{ url_for('auth.decline_borrow_post', id=borrow.id) }}" style="margin:0 0 0 30%;">Decline</a> <br>
                     {% endif %}
                 </div>
             {% endif %}
@@ -103,24 +105,24 @@
                 </div>
             {% endif %}
         {% endfor %}
-             <br style="clear:both;">
-         <h1 class="homewelcome" style="font-size:30px;text-align:center;">Ended Loans</h1>
-        {% for borrow in borrows %}
-            {% if borrow.approved==0 and borrow.is_active==0 %}
-                <div class="col-lg-6" style="border: 1px solid black;">
-                     <div style="float:left">
-                         {% set imagename = (func2(borrow.product_id)).pic_name %}
-                        <img class="resultProductPhoto" src={{url_for('static',filename='images/products/{}'.format(imagename))}} width="180px" height="150px">
-                   </div>
-                   <div style="float:right ;margin:5% 15% 0 0;">
-                       <p>Start Date:{{ borrow.start_date }}</p>
-                       <p>End Date:{{ borrow.end_date }}</p>
-                       <p>Borrower Name: {{ (func(borrow.borrower_id)).name }}</p>
-                       <p>Product Name: {{ (func2(borrow.product_id)).name }}</p>
-                   </div>
-                </div>
-            {% endif %}
-        {% endfor %}
+<!--             <br style="clear:both;">-->
+<!--         <h1 class="homewelcome" style="font-size:30px;text-align:center;">Ended Loans</h1>-->
+<!--        {% for borrow in borrows %}-->
+<!--            {% if borrow.approved==0 and borrow.is_active==0 %}-->
+<!--                <div class="col-lg-6" style="border: 1px solid black;">-->
+<!--                     <div style="float:left">-->
+<!--                         {% set imagename = (func2(borrow.product_id)).pic_name %}-->
+<!--                        <img class="resultProductPhoto" src={{url_for('static',filename='images/products/{}'.format(imagename))}} width="180px" height="150px">-->
+<!--                   </div>-->
+<!--                   <div style="float:right ;margin:5% 15% 0 0;">-->
+<!--                       <p>Start Date:{{ borrow.start_date }}</p>-->
+<!--                       <p>End Date:{{ borrow.end_date }}</p>-->
+<!--                       <p>Borrower Name: {{ (func(borrow.borrower_id)).name }}</p>-->
+<!--                       <p>Product Name: {{ (func2(borrow.product_id)).name }}</p>-->
+<!--                   </div>-->
+<!--                </div>-->
+<!--            {% endif %}-->
+<!--        {% endfor %}-->
     </div>
 </div>
 <br><br><br>
