--- a/project/templates/user_profile.html
+++ b/project/templates/user_profile.html
@@ -31,7 +31,9 @@
             <div style="float:right; margin:10% 0 0 0">
                 {% if result.idle %}
                 <p style="color: green;">This Product is available</p>
-<!--                <a class="btn btn-primary" href="{{ url_for('main.product_page', id=result.id) }}">Borrow</a> <br>-->
+                    {% if current_user.id!=user.id%}
+                        <a class="btn btn-primary" href="{{ url_for('main.product_page', id=result.id) }}">Details</a> <br>
+                    {% endif %}
                {% else %}
                 <p style="color: red;" >This Product isnt available</p>
               {% endif %}
