--- a/project/templates/user_signup.html
+++ b/project/templates/user_signup.html
@@ -29,25 +29,25 @@
     oninput="this.setCustomValidity('')" >
 
       <label for="lastname"><b><p class="hova">*</p> Last Name</p></b></label>
-    <input type="text" placeholder="כהן" name="lastname"
+    <input type="text" placeholder="Cohen" name="lastname"
            required
            oninvalid="this.setCustomValidity('Enter User Last Name Here')"
     oninput="this.setCustomValidity('')" >
 
-      <label for="phone"><b>Phone Number</b></label>
+      <label for="phone"><b> <p class="hova">*</p> Phone Number</b></label>
     <input type="text" placeholder="05x-xxxxxxx" name="phone" pattern="[0][0-9]{2}-[0-9]{7}"
            required
                oninvalid="this.setCustomValidity('Enter User Phone number This Format: 055-1234567')"
     oninput="this.setCustomValidity('')" >
 
       <label for="city"> <p class="hova">*</p> <b> City </b></label>
-    <input type="text" placeholder="אשדוד" name="city" >
+    <input type="text" placeholder="Ashdod" name="city" >
 <!--    required-->
 <!--                      oninvalid="this.setCustomValidity('Enter User City Here')"-->
 <!--    oninput="this.setCustomValidity('')" >-->
 
       <label for="street"><b> <p class="hova">*</p> Street </b></label>
-    <input type="text" placeholder="הנופך" name="street" >
+    <input type="text" placeholder="harofeh" name="street" >
 <!--    required-->
 <!--                      oninvalid="this.setCustomValidity('Enter User Street Here')"-->
 <!--    oninput="this.setCustomValidity('')" >-->
