--- a/project/static/style.css
+++ b/project/static/style.css
@@ -144,7 +144,7 @@ text-align:center;
 }
 .productdesc{
     float:left;
-    margin:10% 5% 0 5%;
+    margin:3% 5% 0 5%;
     font-family: 'Optima';
     font-size:24px;
 }
@@ -245,6 +245,12 @@ text-align:center;
   margin-top:90px;
   padding-bottom:10px;
 }
+.centerformproduct{
+  box-shadow: inset 0 3px 6px rgba(0,0,0,0.16), 0 4px 60px rgba(0,0,0,0.1);
+  width:50%;
+  margin:auto;
+  padding-bottom:10px;
+}
 .hova{
     color:red;
     display:inline;
@@ -321,7 +327,7 @@ input{
     background: #FFFFFF;
     border: 1px solid black;
     border-radius: 5px;
-    height:12px;
+    height:3em;
     top:-2px;
     }
 
