--- a/project/templates/donate_items.html
+++ b/project/templates/donate_items.html
@@ -2,6 +2,14 @@
 
 {% block content %}
 <div class="column is-4 is-offset-4">
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                    <div class="alert alert-warning notification is-danger alert-dismissible" style="color:blue;margin: 1% 0 0 0 ; font-size:120%;text-align:center">
+                        {{ messages[0] }}
+                    </div>
+                    {% endif %}
+                {% endwith %}
+
     <div class="box">
     <form action="/donate_items" method="POST" class="centerform" enctype="multipart/form-data">
         <h1 class="textcenter">Donate Items</h1>
