--- a/project/templates/donate_product_page.html
+++ b/project/templates/donate_product_page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Product page of product : {{product.name }} </h2>
+<h2>Product page : {{product.name }} </h2>
 
     {% set imagename = product.pic_name %}
     <div class="productphoto">
