--- a/project/templates/gmah_results.html
+++ b/project/templates/gmah_results.html
@@ -16,7 +16,7 @@
             <p>Gmah City: {{ result.city }}</p>
             <p>Gmah Category: {{ result.category }}</p>
             <p>Gmah Owner: {{ result.owner_first_name }} {{ result.owner_last_name }}</p>
-            <a href="{{ url_for('main.gmah_page', id=result.id) }}">Gmah Profile</a>
+            <a href="{{ url_for('main.profile', email=result.email) }}">Gmah Profile</a>
             </div>
         </div>
     {% endfor %}
