--- a/project/templates/custom_search.html
+++ b/project/templates/custom_search.html
@@ -1,34 +1,34 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2 style="text-align:center;margin-bottom:5%">Custom Search Page</h2>
+<h2 style="font-family: 'Optima';text-align:center;margin-bottom:5%">Custom Search Page</h2>
 
 <div style="width:90%; margin-left:5%;">
     <div style="float:left;width:33%;border: 1px solid black;">
-<h2 class="headersearch">Search Gmah By City</h2>
+<h2 class="headersearch gap">Search Gmah By City</h2>
 <form action="/searchgmahbycity" method="POST" class="customesearch">
-    <input type="search" name="search" id="search" placeholder="Search Anything Here..." class="form-control">
-      <input style="width:30%;" type="submit" class="form-control">
+    <input type="search" name="search" id="search" placeholder="Search Anything Here..." class="form-control submitfont">
+      <input style="width:30%;" type="submit" class="form-control gap submitfont">
 
 </form>
 </div>
     <div style="float:left;width:33%;border: 1px solid black;">
 <h2 class="headersearch">Search Gmah By Category</h2>
 <form action="/searchgmahbycategory" method="POST" class="customesearch">
-  <label  for="search">Choose a category:</label>
-  <select id="search" name="search" size="1" style="margin-left:40%;">
+  <label  for="search" style="font-family: 'Optima';">Choose a category:</label>
+  <select id="search" name="search" size="1" style="font-family: 'Optima';margin-left:40%;">
      {% for category in categories %}
-    <option name="search" value={{category.category}}>{{category.category}}</option>
+    <option name="search" value={{category.category}} >{{category.category}}</option>
     {% endfor %}
   </select><br><br>
-  <input style="width:30%;" type="submit" class="form-control">
+  <input style="width:30%;" type="submit" class="form-control submitfont">
 </form>
       </div>
     <div style="float:left;width:33%;border: 1px solid black;">
-<h2 class="headersearch" >Search Product</h2>
+<h2 class="headersearch gap" >Search Product</h2>
 <form action="/searchforproduct" method="POST" class="customesearch">
-    <input type="search" name="search" id="search" placeholder="Search Anything Here..." class="form-control">
-      <input style="width:30%;" type="submit" class="form-control">
+    <input type="search" name="search" id="search" placeholder="Search Anything Here..." class="form-control submitfont">
+      <input style="width:30%;" type="submit" class="form-control gap submitfont">
 </form>
       </div>
 </div>
