--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -32,10 +32,15 @@
             <p class="homedesc" >
                 Here you can borrow items from the closest place to your home
             </p>
-            <div class="floatleft" >
-                  <button class="homepushable ">
+            <div style="margin-left:0%;;width:80%;" >
+                  <button class="homepushable" style="margin-left:0%;width:45%;float:left">
                       <a href="/donate_items" class="homefront raise shadowed" style="text-decoration:none">
                         Donate item
+                      </a>
+                  </button>
+                 <button class="homepushable" style="width:45%;float:left;">
+                      <a href="/login" class="homefront raise shadowed" style="text-decoration:none">
+                        login
                       </a>
                   </button>
             </div>
